[gd_scene load_steps=6 format=3 uid="uid://b0lekaw3jxpy8"]

[ext_resource type="Script" path="res://ui/plant_card.gd" id="1_uw5gj"]
[ext_resource type="Texture2D" uid="uid://d1tdpv1qrchbg" path="res://assets/placeholder/seed_packet newbg.png" id="3_crwul"]
[ext_resource type="Texture2D" uid="uid://c7kh2ak0p8if1" path="res://assets/placeholder/temp_pea.png" id="4_nyahm"]
[ext_resource type="Theme" uid="uid://d2556if2flk66" path="res://ui/plant_theme.tres" id="5_wmgap"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_blt6u"]
bg_color = Color(0, 0, 0, 0.619608)

[node name="plant_card" type="Control"]
custom_minimum_size = Vector2(181, 252)
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_uw5gj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.535709, 0.359647, 0.111688, 1)

[node name="card_backing" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 507.0
offset_bottom = 708.0
scale = Vector2(0.35, 0.35)
mouse_filter = 0
texture = ExtResource("3_crwul")

[node name="plant_shadow" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 43.0
offset_top = 98.0
offset_right = 152.0
offset_bottom = 179.0
mouse_filter = 2
texture = ExtResource("4_nyahm")
stretch_mode = 4

[node name="plant" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 100.0
offset_right = 149.0
offset_bottom = 181.0
mouse_filter = 2
texture = ExtResource("4_nyahm")
stretch_mode = 4

[node name="plant_cost_label" type="Label" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 196.0
offset_right = 171.0
offset_bottom = 243.0
theme = ExtResource("5_wmgap")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 44
text = "100"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_blt6u")
value = 100.0
rounded = true
fill_mode = 3
show_percentage = false
